--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -16,27 +16,38 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/backdropimageView"
+                android:scaleType="centerCrop"
+                android:adjustViewBounds="true" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Chappie"
-                android:textColor="#ffffff"
-                android:textSize="50sp"
+                android:textSize="24sp"
+                android:textStyle="bold"
                 android:id="@+id/titleView"
-                android:layout_marginBottom="40dp"
-                android:background="#41C29B"
-                />
+                android:paddingTop="16dp"
+                android:textAlignment="center"/>
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp">
 
                 <ImageView
+                    android:id="@+id/posterimageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/posterimageView"
-                    android:paddingLeft="20dp" />
+                    android:maxWidth="150dp"
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+                    android:paddingLeft="30dp" />
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -44,17 +55,16 @@
                     android:layout_height="137dp"
                     android:weightSum="1"
                     android:paddingLeft="20dp"
-                    android:paddingBottom="20dp"
                     android:textAlignment="center"
                     android:baselineAligned="false">
 
                     <TextView
+                        android:id="@+id/yearText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/yearText"
-                        android:text="2015"
-                        android:editable="false"
-                        android:paddingTop="20dp" />
+                        android:paddingTop="10dp"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="2015"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -67,8 +77,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/voteAverageText"
-                        android:text="8.55/10"
-                        android:editable="false" />
+                        android:text="8.55/10"/>
+
+                    <CheckBox android:id="@+id/btn_star"
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:button="@android:drawable/btn_star" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -77,10 +91,33 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/synopsisText"
-                android:layout_weight="0.11"
                 android:text="synopsis "
                 android:paddingLeft="20dp"
                 android:paddingTop="20dp" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="2dip"
+                android:background="#000000"
+                android:layout_marginTop="10dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/movie_trailers_title"
+                android:paddingLeft="5dp"
+                android:paddingTop="10dp"
+                android:textSize="25dp"
+                android:textStyle="bold"/>
+
+
+            <ListView
+                android:id="@+id/listView_video"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawSelectorOnTop="false"
+                android:text="No trailers available!"
+                />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
