--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -99,16 +99,19 @@
                 android:layout_width="fill_parent"
                 android:layout_height="2dip"
                 android:background="#000000"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/movie_trailers_title"
                 android:paddingLeft="5dp"
                 android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:textSize="25dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textAlignment="center"/>
 
 
             <ListView
@@ -117,7 +120,36 @@
                 android:layout_height="wrap_content"
                 android:drawSelectorOnTop="false"
                 android:text="No trailers available!"
+                android:paddingBottom="10dp"
                 />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="2dip"
+                android:background="#000000"
+                android:layout_marginTop="10dp"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/movie_trailers_review"
+                android:paddingLeft="5dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                android:textAlignment="center"/>
+
+            <ListView
+                android:id="@+id/listView_review"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawSelectorOnTop="false"
+                android:text="No reviews available!"
+                android:paddingBottom="10dp"
+                />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
