--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -8,6 +8,7 @@
 
     <string-array name="pref_sort_by_values">
         <item>@string/pref_sort_by_popular</item>
+        <item>@string/pref_sort_by_top_rated</item>
         <item>@string/pref_sort_by_favorites</item>
     </string-array>
 
